--- a/index.html
+++ b/index.html
@@ -97,7 +97,7 @@
                         <div class="category-content">
                             <h3>Flower</h3>
                             <p>Top-shelf flower</p>
-                            <button class="btn btn-outline">Shop Flower</button>
+                            <a href="shop.html?category=flower&dtche%5Bcategory%5D=flower" class="btn btn-outline">Shop Flower</a>
                         </div>
                     </div>
                     <div class="category-card">
