--- a/shop.html
+++ b/shop.html
@@ -24,7 +24,7 @@
         };
     </script>
     <style>
-        /* Evergreen Retail Inspired Shop Styles */
+        /* Simple Styles for Dutchie Only Page */
         * {
             margin: 0;
             padding: 0;
@@ -39,193 +39,46 @@
             background: #ffffff;
         }
 
-        /* Top Navigation Bar - Evergreen Style */
-        .top-nav {
+        /* Simple Back Button with Logo */
+        .back-button {
             position: fixed;
-            top: 0;
-            left: 0;
-            right: 0;
+            top: 16px;
+            left: 16px;
             z-index: 1000;
+            display: flex;
+            align-items: center;
+            gap: 8px;
+            padding: 8px 12px;
+            background: rgba(255, 255, 255, 0.95);
+            border: 1px solid #e5e7eb;
+            border-radius: 8px;
+            text-decoration: none;
+            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.1);
+            transition: all 0.2s ease;
+        }
+
+        .back-button:hover {
             background: #ffffff;
-            border-bottom: 1px solid #e5e7eb;
-            box-shadow: 0 1px 3px rgba(0, 0, 0, 0.1);
+            box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
+            transform: translateY(-1px);
         }
 
-        .top-nav__container {
-            max-width: 100%;
-            margin: 0 auto;
-            padding: 0;
-        }
-
-        .top-nav__content {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-            padding: 12px 24px;
-            max-width: 1400px;
-            margin: 0 auto;
-        }
-
-        .top-nav__left-section {
-            display: flex;
-            align-items: center;
-            gap: 16px;
-        }
-
-        .menu-btn {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 40px;
-            height: 40px;
-            background: transparent;
-            border: none;
-            cursor: pointer;
-            padding: 0;
-        }
-
-        .menu-btn__icon {
-            width: 24px;
-            height: 24px;
+        .back-button__icon {
+            width: 20px;
+            height: 20px;
             color: #2D3D32;
         }
 
-        .top-nav__logo-link {
-            display: flex;
-            align-items: center;
-            text-decoration: none;
-        }
-
-        .top-nav__logo {
-            height: 40px;
+        .back-button__logo {
+            height: 24px;
             width: auto;
             object-fit: contain;
         }
 
-        .top-nav__right-section {
-            display: flex;
-            align-items: center;
-            gap: 16px;
-        }
-
-        .top-nav__navigation-options {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-            list-style: none;
-        }
-
-        .top-nav__navigation-options li {
-            list-style: none;
-        }
-
-        .navigation-button {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            padding: 8px 16px;
-            background: transparent;
-            border: none;
-            cursor: pointer;
-            text-decoration: none;
-            color: #2D3D32;
-            font-size: 14px;
-            font-weight: 500;
-            border-radius: 4px;
-            transition: background-color 0.2s;
-        }
-
-        .navigation-button:hover {
-            background-color: #f5f5f5;
-        }
-
-        .login-btn {
-            color: #2D3D32;
-        }
-
-        .cart-btn {
-            position: relative;
-        }
-
-        .cart-btn__container {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 40px;
-            height: 40px;
-        }
-
-        /* Delivery Banner - Evergreen Style */
-        .delivery-banner {
-            margin-top: 64px;
-            background: #ffffff;
-            border-bottom: 1px solid #e5e7eb;
-        }
-
-        .delivery-banner__container {
-            max-width: 1400px;
-            margin: 0 auto;
-            padding: 12px 24px;
-        }
-
-        .delivery-banner__content {
-            display: flex;
-            align-items: center;
-            justify-content: space-between;
-        }
-
-        .delivery-banner__left-section {
-            display: flex;
-            align-items: center;
-            gap: 16px;
-        }
-
-        .delivery-type-picker__container {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .delivery-type-picker__option {
-            display: flex;
-            align-items: center;
-            justify-content: center;
-            width: 40px;
-            height: 40px;
-            background: #f5f5f5;
-            border-radius: 8px;
-        }
-
-        .delivery-address-picker {
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .delivery-address-picker a {
-            text-decoration: none;
-            color: #2D3D32;
-            display: flex;
-            align-items: center;
-            gap: 8px;
-        }
-
-        .delivery-address-picker__type-mode-text {
-            font-size: 14px;
-            color: #666;
-        }
-
-        .delivery-address-picker__location-text {
-            font-size: 14px;
-            font-weight: 500;
-            color: #2D3D32;
-        }
-
-        /* Dutchie Container */
+        /* Dutchie Container - Full Page */
         #dutchie-shop-container {
-            margin-top: 120px;
             width: 100%;
-            min-height: calc(100vh - 120px);
+            min-height: 100vh;
             background: #ffffff;
         }
 
@@ -234,7 +87,7 @@
         #dutchie-shop-container [id*="dutchie"],
         #dutchie-shop-container [class*="dutchie"] {
             width: 100% !important;
-            min-height: calc(100vh - 120px) !important;
+            min-height: 100vh !important;
             border: none !important;
             display: block !important;
         }
@@ -245,7 +98,7 @@
             flex-direction: column;
             align-items: center;
             justify-content: center;
-            min-height: calc(100vh - 120px);
+            min-height: 100vh;
             color: #666;
             font-family: 'Poppins', sans-serif;
         }
@@ -265,36 +118,6 @@
             100% { transform: rotate(360deg); }
         }
 
-        /* Override Dutchie Styles */
-        #dutchie-shop-embed :deep(.dutchie-menu) {
-            background: #ffffff !important;
-        }
-
-        /* Mobile Responsive */
-        @media only screen and (max-width: 768px) {
-            .top-nav__content {
-                padding: 8px 16px;
-            }
-
-            .top-nav__logo {
-                height: 32px;
-            }
-
-            .delivery-banner__container {
-                padding: 8px 16px;
-            }
-
-            .delivery-banner__content {
-                flex-direction: column;
-                align-items: flex-start;
-                gap: 8px;
-            }
-
-            #dutchie-shop-container {
-                margin-top: 100px;
-            }
-        }
-
         /* Hide old header if it exists */
         .header {
             display: none;
@@ -302,80 +125,13 @@
     </style>
 </head>
 <body>
-    <!-- Top Navigation - Evergreen Style -->
-    <div class="top-nav">
-        <div class="top-nav__container">
-            <div class="top-nav__content">
-                <div class="top-nav__left-section">
-                    <button class="menu-btn" id="menuBtn" aria-label="Menu">
-                        <svg class="menu-btn__icon" viewBox="0 0 24 24" fill="currentColor">
-                            <rect width="18" height="2" x="3" y="11" rx="0.95" ry="0.95"></rect>
-                            <rect width="18" height="2" x="3" y="16" rx="0.95" ry="0.95"></rect>
-                            <rect width="18" height="2" x="3" y="6" rx="0.95" ry="0.95"></rect>
-                        </svg>
-                    </button>
-                    <a href="index.html" class="top-nav__logo-link">
-                        <img src="images/cannawave-logo.png" alt="CannaWave Logo" class="top-nav__logo">
-                    </a>
-                </div>
-                <div class="top-nav__right-section">
-                    <ul class="top-nav__navigation-options">
-                        <li>
-                            <a href="index.html" class="navigation-button login-btn">Login</a>
-                        </li>
-                        <li>
-                            <button class="navigation-button" aria-label="Search">
-                                <svg width="25" height="25" viewBox="0 0 18 19" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                    <path d="M7.125 2.75C8.41793 2.75 9.65791 3.26361 10.5721 4.17785C11.4864 5.09209 12 6.33207 12 7.625C12 8.8325 11.5575 9.9425 10.83 10.7975L11.0325 11H11.625L15.375 14.75L14.25 15.875L10.5 12.125V11.5325L10.2975 11.33C9.4425 12.0575 8.3325 12.5 7.125 12.5C5.83207 12.5 4.59209 11.9864 3.67785 11.0721C2.76361 10.1579 2.25 8.91793 2.25 7.625C2.25 6.33207 2.76361 5.09209 3.67785 4.17785C4.59209 3.26361 5.83207 2.75 7.125 2.75ZM7.125 4.25C5.25 4.25 3.75 5.75 3.75 7.625C3.75 9.5 5.25 11 7.125 11C9 11 10.5 9.5 10.5 7.625C10.5 5.75 9 4.25 7.125 4.25Z" fill="#000"></path>
-                                </svg>
-                            </button>
-                        </li>
-                        <li>
-                            <button class="navigation-button cart-btn" aria-label="Cart">
-                                <div class="cart-btn__container">
-                                    <svg viewBox="0 0 24 24" height="24px" width="24px" fill="currentColor" color="#2D3D32">
-                                        <g>
-                                            <g>
-                                                <path d="M21.08 7a2 2 0 0 0-1.7-1H6.58L6 3.74A1 1 0 0 0 5 3H3a1 1 0 0 0 0 2h1.24L7 15.26A1 1 0 0 0 8 16h9a1 1 0 0 0 .89-.55l3.28-6.56A2 2 0 0 0 21.08 7zm-4.7 7H8.76L7.13 8h12.25z"></path>
-                                                <circle cx="7.5" cy="19.5" r="1.5"></circle>
-                                                <circle cx="17.5" cy="19.5" r="1.5"></circle>
-                                            </g>
-                                        </g>
-                                    </svg>
-                                </div>
-                            </button>
-                        </li>
-                    </ul>
-                </div>
-            </div>
-        </div>
-    </div>
-
-    <!-- Delivery Banner - Evergreen Style -->
-    <div class="delivery-banner">
-        <div class="delivery-banner__container">
-            <div class="delivery-banner__content">
-                <div class="delivery-banner__left-section">
-                    <div class="delivery-type-picker__container">
-                        <div class="delivery-type-picker__option">
-                            <svg viewBox="0 0 24 24" height="24px" width="24px" fill="currentColor" color="#fafafa">
-                                <path d="M19.148 2.971A2.008 2.008 0 0 0 17.434 2H6.566c-.698 0-1.355.372-1.714.971L2.143 7.485A.995.995 0 0 0 2 8a3.97 3.97 0 0 0 1 2.618V19c0 1.103.897 2 2 2h14c1.103 0 2-.897 2-2v-8.382A3.97 3.97 0 0 0 22 8a.995.995 0 0 0-.143-.515l-2.709-4.514zm.836 5.28A2.003 2.003 0 0 1 18 10c-1.103 0-2-.897-2-2 0-.068-.025-.128-.039-.192l.02-.004L15.22 4h2.214l2.55 4.251zM10.819 4h2.361l.813 4.065C13.958 9.137 13.08 10 12 10s-1.958-.863-1.993-1.935L10.819 4zM6.566 4H8.78l-.76 3.804.02.004C8.025 7.872 8 7.932 8 8c0 1.103-.897 2-2 2a2.003 2.003 0 0 1-1.984-1.749L6.566 4zM10 19v-3h4v3h-4zm6 0v-3c0-1.103-.897-2-2-2h-4c-1.103 0-2 .897-2 2v3H5v-7.142c.321.083.652.142 1 .142a3.99 3.99 0 0 0 3-1.357c.733.832 1.807 1.357 3 1.357s2.267-.525 3-1.357A3.99 3.99 0 0 0 18 12c.348 0 .679-.059 1-.142V19h-3z"></path>
-                            </svg>
-                        </div>
-                    </div>
-                    <div class="delivery-address-picker">
-                        <a href="#">
-                            <div class="delivery-address-picker__type-mode-text">Pickup at</div>
-                            <div class="delivery-address-picker__location-text">CannaWave</div>
-                            <svg viewBox="0 0 16 16" height="12px" width="12px" fill="currentColor" color="#333333">
-                                <path fill-rule="evenodd" d="M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z"></path>
-                            </svg>
-                        </a>
-                    </div>
-                </div>
-            </div>
-        </div>
-    </div>
+    <!-- Simple Back Button with Logo -->
+    <a href="index.html" class="back-button" aria-label="Back to Home">
+        <svg class="back-button__icon" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M19 12H5M12 19l-7-7 7-7"/>
+        </svg>
+        <img src="images/cannawave-logo.png" alt="CannaWave Logo" class="back-button__logo">
+    </a>
 
     <!-- Dutchie Shop Embed Container -->
     <div id="dutchie-shop-container">
@@ -389,21 +145,12 @@
     <script>
         document.addEventListener('DOMContentLoaded', function() {
             const loadingDiv = document.querySelector('.dutchie-loading');
-            const menuBtn = document.getElementById('menuBtn');
             const dutchieContainer = document.getElementById('dutchie-shop-container');
-
-            // Menu button functionality
-            if (menuBtn) {
-                menuBtn.addEventListener('click', function() {
-                    // Add menu functionality here if needed
-                    console.log('Menu clicked');
-                });
-            }
 
             // Wait for Dutchie to inject the menu
             function checkDutchieLoaded() {
                 // Check if Dutchie has created its container
-                const dutchieMenu = document.querySelector('[id*="dutchie"], [class*="dutchie"], iframe[src*="dutchie"]);
+                const dutchieMenu = document.querySelector('[id*="dutchie"], [class*="dutchie"], iframe[src*="dutchie"]');
                 if (dutchieMenu) {
                     if (loadingDiv) {
                         loadingDiv.style.display = 'none';
